# Xling-firmware

./: CMakeLists.txt  CODINGSTYLE.txt  FreeRTOSConfig.h  README.txt
FreeRTOS/: version.txt
FreeRTOS/Demo/: readme.txt
FreeRTOS/Demo/AVR_ATMega1284P_Xling_GCC/: CMakeLists.txt
FreeRTOS/Demo/AVR_ATMega1284P_Xling_GCC/include/mcusim/avr-gcc/avr/drivers/display/sh1106/: sh1106.h  sh1106_graphics.h
FreeRTOS/Demo/AVR_ATMega1284P_Xling_GCC/include/xling/graphics/: luci.h
FreeRTOS/Demo/AVR_ATMega1284P_Xling_GCC/src/: fuse.c  main.c
FreeRTOS/Demo/AVR_ATMega1284P_Xling_GCC/src/mcusim/avr-gcc/avr/drivers/display/sh1106/: sh1106.c  sh1106_graphics.c  sh1106_spi4.c  sh1106_twi.c  sh1106_twibb.c
FreeRTOS/Demo/AVR_ATMega323_WinAVR/serial/: serial.c
FreeRTOS/Source/portable/GCC/ATMega323/: port.c
include/: portmacro.h
include/mcusim/avr-gcc/avr/drivers/display/: sh1106.h  sh1106_graphics.h
include/mcusim/drivers/avr-gcc/avr/display/sh1106/: sh1106.h  sh1106_graphics.h
include/xling/: tasks.h
include/xling/graphics/: luci.h  luci_walking_01.h  luci_walking_02.h  luci_walking_03.h  luci_walking_04.h  xling.h
src/: battery_monitor_task.c  display_task.c  main.c  sleep_mode_task.c
src/mcusim/avr-gcc/avr/drivers/display/: sh1106.c  sh1106_graphics.c
src/mcusim/drivers/avr-gcc/avr/display/sh1106/: sh1106.c  sh1106_graphics.c  sh1106_spi4.c  sh1106_twi.c  sh1106_twibb.c
src/rtos/: port.c
